--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 #container {
-    height: 500px;
-    width: 500px;
+    height: 530px;
+    width: 530px;
+    display: grid;
+    justify-content: space-between;
+    align-content: space-between;
+    background-color: rgb(201, 201, 201);
+    padding: 5px;
+    gap: 2px;
 }
