--- a/style.css
+++ b/style.css
@@ -12,3 +12,36 @@
 .blackBg {
     background-color: black;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: Verdana, sans-serif;
+    align-items: center;
+}
+
+.button-container {
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+}
+
+h1 {
+    padding: 20px;
+}
+
+button {
+    border: 2px solid black;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+button:hover {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+}
