--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     align-content: space-between;
     background-color: rgb(201, 201, 201);
     padding: 5px;
-    gap: 2px;
 }
 
 .blackBg {
@@ -18,6 +17,7 @@ body {
     flex-direction: column;
     font-family: Verdana, sans-serif;
     align-items: center;
+    background-color: rgb(241, 241, 241);
 }
 
 .button-container {
